# contracts_and_notebooks

./: .gitignore  README.md  pyproject.toml  stablecoin.ipynb
src/: AcmeStableCoin.sol
stablecoin/: README.md  abi.py  model.py  ui.py
test/: AcmeStableCoint.t.sol
